update slug in public APIs
